src/components/SideNav/SideNav.module.css
.sideNav {
  border-right: 1px solid #5e5eccc9;
  position: fixed;
  width: 280px;
  background-color: var(--bg-color);
  top: 0;
  height: 100%;
  transform: translateX(-280px);
  padding: 1rem;
  transition: transform 0.15s ease-in;
  overflow-y: scroll;
  scrollbar-width: none;
  z-index: 2;
}

.sideNav--active {
  transform: translateX(0px);
}

.sideNav_ul {
  display: flex;
  flex-direction: column;
}

.sideNav__item {
  padding: 0.8rem 0;
}

.sideNavOption {
  color: #a6afb8;
  text-decoration: none;
  border: none;
  background-color: inherit;
  font-size: 1.3rem;
  font-family: inherit;
  cursor: pointer;
  display: flex;
  align-items: center;
  gap: 0.5rem;

  svg {
    width: 1.5rem;
    height: auto;
  }
}

.sideNavOption__closeBtn {
  font-size: 1.375rem;
  margin-left: auto;
}

